# gst-build

./: .gitignore  deploy.rb  jenkins_build.cmd
bootstrap/: meson.build  meson_options.txt
bootstrap/subprojects/: gobject-introspection.wrap  pygobject-3.0.wrap
subprojects/: FFmpeg.wrap  gl-headers.wrap  glib.wrap  gst-libav.wrap  gst-plugins-bad.wrap  gst-plugins-base.wrap  gst-plugins-good.wrap  gst-plugins-ugly.wrap  gst-python.wrap  gstreamer.wrap  libffi.wrap  libjpeg.wrap  x264.wrap
